# ferret

./: .gitignore  pyproject.toml
data/: baseline_webfetch.py  content_quality.py  grok-test.txt  results_baseline.csv  results_ddg.csv  results_orchestrator_smoke.csv  results_phase5_research.csv  results_phase6_efficiency.csv  results_scrapling.csv  spike_ddg.py  test-urls.csv  test_orchestrator.py  test_phase5_research.py  test_phase6_efficiency.py  test_scrapling.py  webfetch_spotcheck.csv
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: research.md
plugin/skills/research/: SKILL.md
search_orchestrator/: __init__.py  __main__.py  cache.py  chunker.py  fetch.py  scorer.py  search.py  server.py  types.py
tests/: conftest.py  test_cache.py  test_chunker.py  test_efficiency.py  test_fetch_extract.py  test_fetch_integration.py  test_pipeline_integration.py  test_scorer.py  test_search_integration.py
